@@ -38,31 +38,80 @@ El pipeline de CI usa [`jpackage`](https://docs.oracle.com/en/java/javase/23/jpa
 
 Verifica que `java`, `mvn` y `jpackage` estén en el `PATH` antes de continuar.
 
-### Pasos
 
-```powershell
+
+### PASOS PARA USO DE EXPRESSO (CMD o PowerShell)
+
+# Nota: Ubicarse en la Raíz del Proyecto
+
+
+CMD
+
 # 1. Restaurar dependencias y compilar los módulos
+
+#   1.1. Compilar
+mvn -B -DskipTests clean compile
+
+#   1.2. Empaquetar
 mvn -B -DskipTests clean package
 
-# 2. Ejecutar jpackage igual que en CI
+
+# 2. Generar Ejecutable de Expresso en carpeta Dist
+
+
+"%JAVA_HOME%\bin\jlink.exe" ^
+  --module-path "%JAVA_HOME%\jmods" ^
+  --add-modules java.base,java.logging,java.scripting,java.desktop,jdk.compiler ^
+  --output "runtime"
+"%JAVA_HOME%\bin\jpackage.exe" ^
+  --type app-image ^
+  --name expressor ^
+  --input "expresso-cli\target" ^
+  --main-jar "expresso-cli-0.1.0.jar" ^
+  --main-class "com.diezam04.expresso.adapters.cli.Cli" ^
+  --app-version 3.1 ^
+  --runtime-image "runtime" ^
+  --win-console ^
+  --dest "dist"
+
+
+
+Powershell
+
+# 1. Restaurar dependencias y compilar los módulos
+
+#   1.1. Compilar
+mvn -B -DskipTests clean compile
+
+#   1.2. Empaquetar
+mvn -B -DskipTests clean package
+
+
+
+# 2. Generar Ejecutable de Expresso
+
+#    2.1. Generar Runtime  
+& "$env:JAVA_HOME\bin\jlink.exe" `
+  --module-path "$env:JAVA_HOME\jmods" `
+  --add-modules java.base,java.logging,java.scripting,java.desktop,jdk.compiler `
+  --output ".\runtime"
+
+#    2.2. Generar Ejecutable en carpeta Dist
 & "$env:JAVA_HOME\bin\jpackage.exe" `
-  --type exe `
+  --type app-image `
   --name "expressor" `
   --input "expresso-cli\target" `
   --main-jar "expresso-cli-0.1.0.jar" `
   --main-class "com.diezam04.expresso.adapters.cli.Cli" `
   --app-version "3.1" `
-  --vendor "Expresso Team" `
+  --runtime-image ".\runtime" `
   --win-console `
-  --win-menu `
-  --win-menu-group "Expresso" `
-  --win-dir-chooser `
   --dest "dist"
 
-Write-Host "Instalador listo: dist\expressor-3.1.exe"
-```
 
-El ejecutable generado se firma como un instalador gráfico que crea accesos directos y agrega el comando `expressor` al menú Inicio. Ejecuta el `.exe` resultante para instalar la aplicación.
+
+El ejecutable generado puede ser invocado con `expressor`.
+
 
 ## Uso basico del CLI `expressor`
 > El CLI es una aplicación **Java** (no *shell script*). Los siguientes comandos son parte del **Sprint Inicial** como *mocks* funcionales.
@@ -81,4 +130,3 @@ expressor run examples/HelloWorld0.expresso
 # -> Transpila, compila y ejecuta la clase resultante
 ```
 ---
-#
